--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
     <section class="content-section about-section">
         <div class="about-container">
             <div class="about-image-container">
-                <img src="https://github.com/Om-Singh-45/Portfolio/blob/main/images/om_image_mnali.jpg?raw=true" alt="Om Singh" class="about-profile-image">
+                <img src="https://github.com/Om-Singh-45/Portfolio/blob/main/images/om_image_mnali.jpg?raw=true" alt="Om Singh" class="about-profile-image" loading="lazy">
             </div>
             <div class="about-content">
                 <div class="about-header">
