--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <title>Om Singh - Portfolio</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <!-- Preload critical images -->
+    <link rel="preload" as="image" href="https://github.com/Om-Singh-45/Portfolio/blob/main/images/projects/Screenshot%202025-11-10%20164152.png?raw=true">
+    <link rel="preload" as="image" href="https://om-singh-45.github.io/Portfolio/images/projects/text_to_image.png">
+    <!-- Resource hints -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="dns-prefetch" href="https://github.com">
+    <link rel="dns-prefetch" href="https://om-singh-45.github.io">
 </head>
 <body>
     <!-- Navigation -->
@@ -124,7 +132,7 @@
             <button class="carousel-btn left"><i class="fas fa-chevron-left"></i></button>
             <div class="carousel-container">
                 <div class="card">
-                    <img src="https://github.com/Om-Singh-45/Portfolio/blob/main/images/projects/Screenshot%202025-11-10%20164152.png?raw=true" alt="E-Commerce Platform">
+                    <img src="https://github.com/Om-Singh-45/Portfolio/blob/main/images/projects/Screenshot%202025-11-10%20164152.png?raw=true" alt="E-Commerce Platform" loading="lazy">
                     <div class="card-info">
                         <h3>E-Commerce Platform</h3>
                         <p>Full-featured e-commerce web application with role-based login, smart recommendations, and chatbot assistance.</p>
@@ -136,7 +144,7 @@
                     </div>
                 </div>
                 <div class="card">
-                    <img src="https://github.com/Om-Singh-45/Portfolio/blob/main/images/projects/Screenshot%202025-11-10%20163609.png?raw=true" alt="MindSpace Chatbot">
+                    <img src="https://github.com/Om-Singh-45/Portfolio/blob/main/images/projects/Screenshot%202025-11-10%20163609.png?raw=true" alt="MindSpace Chatbot" loading="lazy">
                     <div class="card-info">
                         <h3>MindSpace: AI Mental Health Chatbot</h3>
                         <p>Privacy-first mental health companion using local LLMs and RAG for empathetic support.</p>
@@ -148,7 +156,7 @@
                     </div>
                 </div>
                 <div class="card">
-                    <img src="https://om-singh-45.github.io/Portfolio/images/projects/movie_booking.png" alt="Movie Ticket Booking System">
+                    <img src="https://om-singh-45.github.io/Portfolio/images/projects/movie_booking.png" alt="Movie Ticket Booking System" loading="lazy">
                     <div class="card-info">
                         <h3>Movie Ticket Booking System using AI</h3>
                         <p>An intelligent movie ticket booking system that integrates AI-powered chat features.</p>
@@ -160,7 +168,7 @@
                     </div>
                 </div>
                 <div class="card">
-                    <img src="https://om-singh-45.github.io/Portfolio/images/projects/text_to_image.png" alt="Text-to-Image Generator">
+                    <img src="https://om-singh-45.github.io/Portfolio/images/projects/text_to_image.png" alt="Text-to-Image Generator" loading="lazy">
                     <div class="card-info">
                         <h3>Text-to-Image Generator</h3>
                         <p>A powerful AI-based Text-to-Image Generator using deep learning models.</p>
@@ -172,7 +180,7 @@
                     </div>
                 </div>
                 <div class="card">
-                    <img src="https://media.licdn.com/dms/image/v2/D4D2DAQE9XgUzSMiuzg/profile-treasury-image-shrink_800_800/B4DZZuXfcfGgAY-/0/1745608374808?e=1763380800&v=beta&t=hvdfPYzl0cdKlB17prJNUOSVhwWEkSoT3JUuEOY_KPw" alt="Self-Driven AI Car">
+                    <img src="https://media.licdn.com/dms/image/v2/D4D2DAQE9XgUzSMiuzg/profile-treasury-image-shrink_800_800/B4DZZuXfcfGgAY-/0/1745608374808?e=1763380800&v=beta&t=hvdfPYzl0cdKlB17prJNUOSVhwWEkSoT3JUuEOY_KPw" alt="Self-Driven AI Car" loading="lazy">
                     <div class="card-info">
                         <h3>Self-Driven AI Car Simulator</h3>
                         <p>AI-powered car simulator using reinforcement learning and computer vision.</p>
@@ -184,7 +192,7 @@
                     </div>
                 </div>
                 <div class="card">
-                    <img src="https://om-singh-45.github.io/Portfolio/images/projects/recipe_finder.png" alt="Food Recipe Suggestor">
+                    <img src="https://om-singh-45.github.io/Portfolio/images/projects/recipe_finder.png" alt="Food Recipe Suggestor" loading="lazy">
                     <div class="card-info">
                         <h3>Food Recipe Suggestor</h3>
                         <p>A smart ML-based system that suggests recipes based on ingredients.</p>
@@ -242,7 +250,7 @@
         <div class="experience-container">
             <div class="experience-card internship-card">
                 <div class="company-logo">
-                    <img src="https://media.licdn.com/dms/image/v2/D4D0BAQGi54Yd0O6iBg/img-crop_100/B4DZfWdE7DGUAM-/0/1751649638737?e=1764201600&v=beta&t=GdzLbmaH-Z8sxNX3vd7-sVpOoEdq19ukh9e4D0ObD0w" alt="Trinetrini Quantum">
+                    <img src="https://media.licdn.com/dms/image/v2/D4D0BAQGi54Yd0O6iBg/img-crop_100/B4DZfWdE7DGUAM-/0/1751649638737?e=1764201600&v=beta&t=GdzLbmaH-Z8sxNX3vd7-sVpOoEdq19ukh9e4D0ObD0w" alt="Trinetrini Quantum" loading="lazy">
                 </div>
                 <div class="experience-header">
                     <div>
@@ -261,7 +269,7 @@
             
             <div class="experience-card internship-card">
                 <div class="company-logo">
-                    <img src="https://media.licdn.com/dms/image/v2/D4D0BAQHMLcRwSuw-PA/company-logo_200_200/B4DZfupqx4HAAI-/0/1752055590518?e=1764201600&v=beta&t=R46hEQBez9JyGNdgOEbDgZ2HCdbeELwJhCdMfVMy-kc" alt="Non-Malignant">
+                    <img src="https://media.licdn.com/dms/image/v2/D4D0BAQHMLcRwSuw-PA/company-logo_200_200/B4DZfupqx4HAAI-/0/1752055590518?e=1764201600&v=beta&t=R46hEQBez9JyGNdgOEbDgZ2HCdbeELwJhCdMfVMy-kc" alt="Non-Malignant" loading="lazy">
                 </div>
                 <div class="experience-header">
                     <div>
