--- a/about.html
+++ b/about.html
@@ -12,6 +12,11 @@
     <nav class="navbar">
         <div class="nav-container">
             <div class="nav-brand">Om Singh</div>
+            <button class="nav-toggle" aria-label="Toggle navigation">
+                <span></span>
+                <span></span>
+                <span></span>
+            </button>
             <div class="nav-links">
                 <a href="index.html">Home</a>
                 <a href="about.html" class="active">About</a>
