--- a/projects.html
+++ b/projects.html
@@ -24,6 +24,11 @@
     <nav class="navbar scrolled">
         <div class="nav-container">
             <div class="nav-brand">Om Singh</div>
+            <button class="nav-toggle" aria-label="Toggle navigation">
+                <span></span>
+                <span></span>
+                <span></span>
+            </button>
             <div class="nav-links">
                 <a href="index.html">Home</a>
                 <a href="about.html">About</a>
