--- a/about.html
+++ b/about.html
@@ -86,7 +86,22 @@
 
     <!-- Footer -->
     <footer class="footer">
-        <p>&copy; 2025 Om Singh. All Rights Reserved.</p>
+        <div class="footer-inner">
+            <div class="footer-brand">Om Singh</div>
+            <nav class="footer-links">
+                <a href="index.html">Home</a>
+                <a href="projects.html">Projects</a>
+                <a href="skills.html">Skills</a>
+                <a href="education.html">Education</a>
+                <a href="contact.html">Contact</a>
+            </nav>
+            <div class="footer-social">
+                <a href="https://github.com/Om-Singh-45" target="_blank" aria-label="GitHub"><i class="fab fa-github"></i></a>
+                <a href="https://www.linkedin.com/in/om-singh5/" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
+                <a href="mailto:omsingh@example.com" aria-label="Email"><i class="fas fa-envelope"></i></a>
+            </div>
+            <p class="footer-copy">© 2025 Om Singh. All Rights Reserved.</p>
+        </div>
     </footer>
 
     <script src="script.js"></script>
