--- a/index.html
+++ b/index.html
@@ -294,28 +294,32 @@
             <h2 class="section-title">Education Journey</h2>
             <a href="education.html" class="view-more">View All <i class="fas fa-arrow-right"></i></a>
         </div>
-        <div class="experience-container">
-            <div class="experience-card">
-                <div class="experience-header">
-                    <h3>B.Tech - Bachelor of Technology</h3>
-                    <span class="experience-period">Present</span>
+        <div class="carousel" style="position: relative;">
+            <button class="carousel-btn left"><i class="fas fa-chevron-left"></i></button>
+            <div class="carousel-container">
+                <div class="experience-card">
+                    <div class="experience-header">
+                        <h3>B.Tech - Bachelor of Technology</h3>
+                        <span class="experience-period">Present</span>
+                    </div>
+                    <p class="experience-company">Vidyalankar Institute of Technology</p>
+                    <p class="experience-description">
+                        Pursuing Bachelor of Technology with focus on Software Development, Data Analytics, AI & Machine Learning.
+                    </p>
                 </div>
-                <p class="experience-company">Vidyalankar Institute of Technology</p>
-                <p class="experience-description">
-                    Pursuing Bachelor of Technology with focus on Software Development, Data Analytics, AI & Machine Learning.
-                </p>
-            </div>
-            
-            <div class="experience-card">
-                <div class="experience-header">
-                    <h3>HSC - Higher Secondary Certificate</h3>
-                    <span class="experience-period">Completed</span>
+                
+                <div class="experience-card">
+                    <div class="experience-header">
+                        <h3>HSC - Higher Secondary Certificate</h3>
+                        <span class="experience-period">Completed</span>
+                    </div>
+                    <p class="experience-company">Guru Nanak Khalsa College of Science</p>
+                    <p class="experience-description">
+                        Completed higher secondary education with strong emphasis on science and mathematics.
+                    </p>
                 </div>
-                <p class="experience-company">Guru Nanak Khalsa College of Science</p>
-                <p class="experience-description">
-                    Completed higher secondary education with strong emphasis on science and mathematics.
-                </p>
             </div>
+            <button class="carousel-btn right"><i class="fas fa-chevron-right"></i></button>
         </div>
     </section>
 
@@ -365,7 +369,22 @@
 
     <!-- Footer -->
     <footer class="footer">
-        <p>&copy; 2025 Om Singh. All Rights Reserved.</p>
+        <div class="footer-inner">
+            <div class="footer-brand">Om Singh</div>
+            <nav class="footer-links">
+                <a href="index.html">Home</a>
+                <a href="projects.html">Projects</a>
+                <a href="skills.html">Skills</a>
+                <a href="education.html">Education</a>
+                <a href="contact.html">Contact</a>
+            </nav>
+            <div class="footer-social">
+                <a href="https://github.com/Om-Singh-45" target="_blank" aria-label="GitHub"><i class="fab fa-github"></i></a>
+                <a href="https://www.linkedin.com/in/om-singh5/" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
+                <a href="mailto:omsingh@example.com" aria-label="Email"><i class="fas fa-envelope"></i></a>
+            </div>
+            <p class="footer-copy">© 2025 Om Singh. All Rights Reserved.</p>
+        </div>
     </footer>
 
     <!-- Floating Action Button -->
