--- a/index.html
+++ b/index.html
@@ -1,9 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="dark">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Om Singh - Portfolio</title>
+    <script>
+        (function () {
+            try {
+                const stored = localStorage.getItem('preferred-theme');
+                const prefersDark = window.matchMedia('(prefers-color-scheme: dark)').matches;
+                const theme = stored || (prefersDark ? 'dark' : 'light');
+                document.documentElement.setAttribute('data-theme', theme);
+            } catch (err) {
+                document.documentElement.setAttribute('data-theme', 'dark');
+            }
+        })();
+    </script>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <script>
@@ -26,6 +38,21 @@
     <link rel="dns-prefetch" href="https://om-singh-45.github.io">
 </head>
 <body>
+    <!-- Persona Welcome Modal -->
+    <div id="welcomeModal" class="welcome-modal" aria-hidden="true" hidden>
+        <div class="welcome-modal__backdrop"></div>
+        <div class="welcome-modal__panel" role="dialog" aria-labelledby="welcomeTitle" aria-describedby="welcomeDescription" tabindex="-1">
+            <button class="welcome-modal__close" type="button" aria-label="Close welcome message">
+                <i class="fas fa-times"></i>
+            </button>
+            <h2 id="welcomeTitle"></h2>
+            <div id="welcomeDescription" class="welcome-modal__body"></div>
+            <button class="welcome-modal__cta" type="button">
+                Let’s explore
+            </button>
+        </div>
+    </div>
+
     <!-- Navigation -->
     <nav class="navbar">
         <div class="nav-container">
@@ -45,6 +72,10 @@
                 <a href="contact.html">Contact</a>
             </div>
             <div class="nav-icons">
+                <button class="theme-toggle" type="button" aria-label="Switch to light mode">
+                    <span class="sr-only">Toggle theme</span>
+                    <i class="fas fa-sun"></i>
+                </button>
                 <div class="search-container">
                     <i class="fas fa-search" id="searchIcon"></i>
                     <div class="search-dropdown">
